--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   toggle_switch: ^1.2.0
   firebase_core: ^1.3.0
   firebase_auth: ^2.0.0
+  cloud_firestore: ^2.3.0
 
 
 dev_dependencies:
