--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   firebase_core: ^1.3.0
   firebase_auth: ^2.0.0
   cloud_firestore: ^2.3.0
+  image_picker: ^0.7.4
+  firebase_storage: ^10.0.1
+
 
 
 dev_dependencies:
